<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormCadastro"
    android:background="#DDDDDD"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cadastrese"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <View
        android:id="@+id/containerCadastro"
        style="@style/containerComponent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/nomeCadastro"
        style="@style/Edit_text"
        android:autofillHints=""
        android:drawableEnd="@drawable/icone_user"
        android:drawableRight="@drawable/icone_user"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLength="25"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@id/containerCadastro"
        app:layout_constraintStart_toStartOf="@id/nomeCadastro"
        app:layout_constraintTop_toTopOf="@id/containerCadastro" />

    <EditText
        android:id="@+id/emailCadastro"
        style="@style/Edit_text"
        android:autofillHints=""
        android:drawableEnd="@drawable/icone_email"
        android:drawableRight="@drawable/icone_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="25"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@id/containerCadastro"
        app:layout_constraintStart_toStartOf="@id/nomeCadastro"
        app:layout_constraintTop_toBottomOf="@id/nomeCadastro" />

    <EditText
        android:id="@+id/senhaCadastro"
        style="@style/Edit_text"
        android:autofillHints=""
        android:drawableEnd="@drawable/icone_eye"
        android:drawableRight="@drawable/icone_eye"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="25"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@id/containerCadastro"
        app:layout_constraintStart_toStartOf="@id/nomeCadastro"
        app:layout_constraintTop_toBottomOf="@id/emailCadastro" />

    <Button
        android:id="@+id/button"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senhaCadastro"
        app:layout_constraintVertical_bias="0.109" />

</androidx.constraintlayout.widget.ConstraintLayout>